2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* More install script fixes:  Phlickr wouldn't install, and the permissions of wifidog/tmp/smarty/cache weren't checked.

2006-05-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* More stylesheet and HTML work

2006-05-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix loging form incorrectly attempting to validate the password, preventing many existing
	accounts from logging-in.
	* Interim commit, begin simplifying the html ans stylesheets, and re-doing the general look.
	This is incomplete, this commit was done to fix the problem above.
	* install.php:  Fix path problems, make shel command errors visible.  Update magpie and smarty url to latest versions (note that this won't 
	automatically update an existing install).  Didn't touch phlickr as I didn't know the implications  
	* Add interactive scripts in sql/ to easily backup and restore a wifidog auth server database.

2006-05-10 François Proulx <francois.proulx@gmail.com>
	* Fixed Google Maps script path to images.

2006-05-10 François Proulx <francois.proulx@gmail.com>
	* Added sweetTitles tooltips script, now if you need to add tooltips simply add the 'title' attribute to you html <a>, <attr>, <accroym> tags
	* Fixed usort bug in MainUI
	* Fixed download (wget) in install.php

2006-05-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Working (if slightly basic) theme manager.  You can pick the theme in the network configuration.
	To add your own theme, read wifidog/media/network_theme_packs/README.txt
	* Cleanup and document the wifidog directory structure
	* Minor HTML corrections for content types
	* Completely rip out the old local_content system, and a bunch of obsolete defines and config variables.
	* Get rid of PHP generated stylesheets

2006-05-09 Benoit Grégoire  <bock@step.polymtl.ca>
	* Finish content assignation system
	* Content ordering is now global (network, nodes and everywhere content cand now be in mixed order).
  	* Implement 'everywhere' content