@@ -67,10 +67,10 @@
  * @link       http://www.wifidog.org/
  */
 
+
 /*
  * Tests ...
  *
-
 echo '$_SERVER[\'DOCUMENT_ROOT\']: ' . $_SERVER['DOCUMENT_ROOT'] . '<br/>';
 // Not always available on Windows
 
@@ -92,10 +92,6 @@ echo '$_SERVER[\'PATH_TRANSLATED\']: ' . $_SERVER['PATH_TRANSLATED'] . '<br/>';
 
 echo "<br/>";
 
- *
- *
- *
-
 // This will never work for subdirectories
 $path_tmp = strstr($_SERVER['SCRIPT_FILENAME'], $_SERVER['PHP_SELF']);
 $pos = strrpos($path_tmp, '/');
@@ -106,20 +102,22 @@ define('SYSTEM_PATH', $path_tmp);
  * End of tests ...
  */
 
-if (!defined('SYSTEM_PATH') || !defined('WIFIDOG_ABS_FILE_PATH')) {
-  /**
-   * Detect wifidog-auth directory base
-   */
-
+if (!defined('WIFIDOG_ABS_FILE_PATH')) {
   // the name of this file's parent directory is the wifidog root.
   // that's a constant, ok, unless this file moves up or down in the hierarchy.
   $wifidog_base = dirname(dirname(__FILE__));
-
+  define('WIFIDOG_ABS_FILE_PATH', $wifidog_base . "/");
+}
+if (!defined('SYSTEM_PATH') && isset($_SERVER['REQUEST_URI'])) {
+  /**
+   * Detect wifidog-auth directory base, but only if we are NOT called from the
+   * command line
+   */
   $browser_url = $_SERVER['SCRIPT_NAME']; // browser url to the script
   $apache_path = $_SERVER['SCRIPT_FILENAME']; // system path to the very same script
-  while ($browser_url != "" && $browser_url != "/" && $apache_path != $wifidog_base) {
+  while ($browser_url != "" && $browser_url != "/" && $apache_path != WIFIDOG_ABS_FILE_PATH) {
     // find the URI that maps to the wifidog base.
-    // figure out the difference between the browser's url, the file system path, and $wifidog_base,
+    // figure out the difference between the browser's url, the file system path, and WIFIDOG_ABS_FILE_PATH,
     // piece by piece, starting on the right.
     // The point at which they diverge defines our DOCUMENT_ROOT and SYSTEM_PATH
     // note: forget about apache's "DOCUMENT_ROOT".  there may be apache ALIASES!!!
@@ -138,19 +136,15 @@ if (!defined('SYSTEM_PATH') || !defined('WIFIDOG_ABS_FILE_PATH')) {
   if (substr($apache_path,-1,1) == '/' && $apache_path != '/') $apache_path = substr($apache_path,0,-1);
   if ($browser_url == "" || substr($browser_url,-1,1) != '/') $browser_url .= '/';
   if (!defined('SYSTEM_PATH')) define('SYSTEM_PATH', $browser_url);
-
-  //if (!defined('WIFIDOG_ABS_FILE_PATH')) define('WIFIDOG_ABS_FILE_PATH', $apache_path . "/");
-  if (!defined('WIFIDOG_ABS_FILE_PATH')) define('WIFIDOG_ABS_FILE_PATH', $wifidog_base . "/");
 }
+
 
 /*
  * Debug output
  *
-
 echo "SYSTEM_PATH: " . SYSTEM_PATH . "<br/>";
 echo "WIFIDOG_ABS_FILE_PATH: " . WIFIDOG_ABS_FILE_PATH . "<br/>";
 exit;
-
  *
  * End of debug output
  */
